<resources>
    <string name="app_name">Fanager</string>
    <string name="app_version">version 1.0</string>
    <string name="app_description">Easy file manager for android</string>
    <string name="developer_contact">You may contact developer through</string>
    <string name="developer_site_link">https://TheVer4.github.io/</string>
    <string name="app_new_versions">New versions always at</string>
    <string name="github_link">http://github.com/TheVer4/Fanager</string>
</resources>
